name:                horizon
version:             0.1.0
synopsis:            Sunrise and sunset UTC approximations from latitude and longitude coordinates
license:             BSD3
license-file:        LICENSE
author:              Joel Stanley
maintainer:          intractable@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  exposed-modules:     Data.Time.Horizon
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7      && < 4.8,
                       time >= 1.4.2   && < 1.5,
                       AC-Angle >= 1.0 && < 2.0
  hs-source-dirs:      src
  default-language:    Haskell2010
